<?xml version="1.0"?>
<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<modelVersion>4.0.0</modelVersion>
	<groupId>org.openlca</groupId>
	<artifactId>olca-modules</artifactId>
	<version>1.7.1</version>
	<packaging>pom</packaging>
	<name>${project.groupId}:${project.artifactId}</name>
	<url>http://www.openlca.org/</url>

	<issueManagement>
		<system>GitHub Issues</system>
		<url>https://github.com/GreenDelta/olca-modules/issues</url>
	</issueManagement>

	<licenses>
		<license>
			<name>Mozilla Public License, Version 2.0</name>
			<url>https://www.mozilla.org/en-US/MPL/2.0/</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<scm>
		<connection>scm:git:https://github.com/GreenDelta/olca-modules.git</connection>
		<developerConnection>scm:git:git@github.com:GreenDelta/olca-modules.git</developerConnection>
		<url>https://github.com/GreenDelta/olca-modules</url>
	</scm>

	<developers>
		<developer>
			<id>msrocka</id>
			<name>Michael Srocka</name>
			<email>srocka@greendelta.com</email>
			<organization>GreenDelta</organization>
			<organizationUrl>http://www.greendelta.com</organizationUrl>
			<roles>
				<role>owner</role>
				<role>developer</role>
			</roles>
			<timezone>+1</timezone>
		</developer>
		<developer>
			<id>sgreve</id>
			<name>Sebastian Greve</name>
			<email>greve@greendelta.com</email>
			<organization>GreenDelta</organization>
			<organizationUrl>http://www.greendelta.com</organizationUrl>
			<roles>
				<role>developer</role>
			</roles>
			<timezone>+1</timezone>
		</developer>
	</developers>

	<ciManagement>
		<system>Travis CI</system>
		<url>https://travis-ci.org/GreenDelta/olca-modules</url>
	</ciManagement>

	<modules>
		<module>olca-cloud</module>
		<module>olca-core</module>
		<module>olca-ecospold-1</module>
		<module>olca-ecospold-2</module>
		<module>olca-formula</module>
		<module>olca-geo</module>
		<module>olca-ilcd</module>
		<module>olca-io</module>
		<module>olca-ipc</module>
		<module>olca-jsonld</module>
		<module>olca-simapro-csv</module>
	</modules>

	<dependencies>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.25</version>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>1.7.25</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.6.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<!-- TODO enables this (maybe via a specific task) when we finally publish to Maven central
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.0.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.10.4</version>
				<configuration>
					<additionalparam>-Xdoclint:none</additionalparam>
				</configuration>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			 -->
		</plugins>
	</build>

</project>
